ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.8


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

ExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::RootContext* ExprParser::ProgContext::root() {
  return getRuleContext<ExprParser::RootContext>(0);
}


size_t ExprParser::ProgContext::getRuleIndex() const {
  return ExprParser::RuleProg;
}


antlrcpp::Any ExprParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgContext* ExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    root();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RootContext ------------------------------------------------------------------

ExprParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::Func_declarationContext *> ExprParser::RootContext::func_declaration() {
  return getRuleContexts<ExprParser::Func_declarationContext>();
}

ExprParser::Func_declarationContext* ExprParser::RootContext::func_declaration(size_t i) {
  return getRuleContext<ExprParser::Func_declarationContext>(i);
}

ExprParser::GlobaldeclarationContext* ExprParser::RootContext::globaldeclaration() {
  return getRuleContext<ExprParser::GlobaldeclarationContext>(0);
}

ExprParser::BlankdeclarationContext* ExprParser::RootContext::blankdeclaration() {
  return getRuleContext<ExprParser::BlankdeclarationContext>(0);
}


size_t ExprParser::RootContext::getRuleIndex() const {
  return ExprParser::RuleRoot;
}


antlrcpp::Any ExprParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::RootContext* ExprParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleRoot);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(63); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(62);
          func_declaration();
          setState(65); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ExprParser::T__0);
        break;
      }

      case ExprParser::T__13:
      case ExprParser::T__14:
      case ExprParser::T__15:
      case ExprParser::T__16:
      case ExprParser::T__17: {
        enterOuterAlt(_localctx, 2);
        setState(67);
        globaldeclaration();
        break;
      }

      case ExprParser::EOF: {
        enterOuterAlt(_localctx, 3);
        setState(68);
        blankdeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlankdeclarationContext ------------------------------------------------------------------

ExprParser::BlankdeclarationContext::BlankdeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::BlankdeclarationContext::getRuleIndex() const {
  return ExprParser::RuleBlankdeclaration;
}


antlrcpp::Any ExprParser::BlankdeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBlankdeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::BlankdeclarationContext* ExprParser::blankdeclaration() {
  BlankdeclarationContext *_localctx = _tracker.createInstance<BlankdeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleBlankdeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobaldeclarationContext ------------------------------------------------------------------

ExprParser::GlobaldeclarationContext::GlobaldeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::GlobaldeclarationContext::Semi() {
  return getToken(ExprParser::Semi, 0);
}

ExprParser::RootContext* ExprParser::GlobaldeclarationContext::root() {
  return getRuleContext<ExprParser::RootContext>(0);
}

ExprParser::DatatypeContext* ExprParser::GlobaldeclarationContext::datatype() {
  return getRuleContext<ExprParser::DatatypeContext>(0);
}

std::vector<ExprParser::IndividualDeclarationContext *> ExprParser::GlobaldeclarationContext::individualDeclaration() {
  return getRuleContexts<ExprParser::IndividualDeclarationContext>();
}

ExprParser::IndividualDeclarationContext* ExprParser::GlobaldeclarationContext::individualDeclaration(size_t i) {
  return getRuleContext<ExprParser::IndividualDeclarationContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::GlobaldeclarationContext::Comma() {
  return getTokens(ExprParser::Comma);
}

tree::TerminalNode* ExprParser::GlobaldeclarationContext::Comma(size_t i) {
  return getToken(ExprParser::Comma, i);
}


size_t ExprParser::GlobaldeclarationContext::getRuleIndex() const {
  return ExprParser::RuleGlobaldeclaration;
}


antlrcpp::Any ExprParser::GlobaldeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitGlobaldeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::GlobaldeclarationContext* ExprParser::globaldeclaration() {
  GlobaldeclarationContext *_localctx = _tracker.createInstance<GlobaldeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleGlobaldeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    datatype();
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::VAR_NAME) {
      setState(74);
      individualDeclaration();
    }
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::Comma) {
      setState(77);
      match(ExprParser::Comma);
      setState(78);
      individualDeclaration();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(ExprParser::Semi);
    setState(85);
    root();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declarationContext ------------------------------------------------------------------

ExprParser::Func_declarationContext::Func_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::Func_declarationContext::getRuleIndex() const {
  return ExprParser::RuleFunc_declaration;
}

void ExprParser::Func_declarationContext::copyFrom(Func_declarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ListFuncDecContext ------------------------------------------------------------------

ExprParser::DatatypeContext* ExprParser::ListFuncDecContext::datatype() {
  return getRuleContext<ExprParser::DatatypeContext>(0);
}

tree::TerminalNode* ExprParser::ListFuncDecContext::VAR_NAME() {
  return getToken(ExprParser::VAR_NAME, 0);
}

ExprParser::List_argsContext* ExprParser::ListFuncDecContext::list_args() {
  return getRuleContext<ExprParser::List_argsContext>(0);
}

ExprParser::BlockContext* ExprParser::ListFuncDecContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

ExprParser::ListFuncDecContext::ListFuncDecContext(Func_declarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ListFuncDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitListFuncDec(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::Func_declarationContext* ExprParser::func_declaration() {
  Func_declarationContext *_localctx = _tracker.createInstance<Func_declarationContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleFunc_declaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<Func_declarationContext *>(_tracker.createInstance<ExprParser::ListFuncDecContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(ExprParser::T__0);
    setState(88);
    datatype();
    setState(89);
    match(ExprParser::VAR_NAME);
    setState(90);
    list_args();
    setState(91);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- List_argsContext ------------------------------------------------------------------

ExprParser::List_argsContext::List_argsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::List_argsContext::LeftParen() {
  return getToken(ExprParser::LeftParen, 0);
}

tree::TerminalNode* ExprParser::List_argsContext::RightParen() {
  return getToken(ExprParser::RightParen, 0);
}

std::vector<ExprParser::DatatypeContext *> ExprParser::List_argsContext::datatype() {
  return getRuleContexts<ExprParser::DatatypeContext>();
}

ExprParser::DatatypeContext* ExprParser::List_argsContext::datatype(size_t i) {
  return getRuleContext<ExprParser::DatatypeContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::List_argsContext::VAR_NAME() {
  return getTokens(ExprParser::VAR_NAME);
}

tree::TerminalNode* ExprParser::List_argsContext::VAR_NAME(size_t i) {
  return getToken(ExprParser::VAR_NAME, i);
}

std::vector<tree::TerminalNode *> ExprParser::List_argsContext::Comma() {
  return getTokens(ExprParser::Comma);
}

tree::TerminalNode* ExprParser::List_argsContext::Comma(size_t i) {
  return getToken(ExprParser::Comma, i);
}


size_t ExprParser::List_argsContext::getRuleIndex() const {
  return ExprParser::RuleList_args;
}


antlrcpp::Any ExprParser::List_argsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitList_args(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::List_argsContext* ExprParser::list_args() {
  List_argsContext *_localctx = _tracker.createInstance<List_argsContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleList_args);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(ExprParser::LeftParen);
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__13)
      | (1ULL << ExprParser::T__14)
      | (1ULL << ExprParser::T__15)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__17))) != 0)) {
      setState(94);
      datatype();
      setState(95);
      match(ExprParser::VAR_NAME);
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ExprParser::Comma) {
        setState(96);
        match(ExprParser::Comma);
        setState(97);
        datatype();
        setState(98);
        match(ExprParser::VAR_NAME);
        setState(104);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(107);
    match(ExprParser::RightParen);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ExprParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::BlockContext::LeftCurly() {
  return getToken(ExprParser::LeftCurly, 0);
}

tree::TerminalNode* ExprParser::BlockContext::RightCurly() {
  return getToken(ExprParser::RightCurly, 0);
}

std::vector<ExprParser::StatementContext *> ExprParser::BlockContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::BlockContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}


size_t ExprParser::BlockContext::getRuleIndex() const {
  return ExprParser::RuleBlock;
}


antlrcpp::Any ExprParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::BlockContext* ExprParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(ExprParser::LeftCurly);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__1)
      | (1ULL << ExprParser::T__2)
      | (1ULL << ExprParser::T__3)
      | (1ULL << ExprParser::T__4)
      | (1ULL << ExprParser::T__5)
      | (1ULL << ExprParser::T__6)
      | (1ULL << ExprParser::T__7)
      | (1ULL << ExprParser::T__11)
      | (1ULL << ExprParser::T__12)
      | (1ULL << ExprParser::T__13)
      | (1ULL << ExprParser::T__14)
      | (1ULL << ExprParser::T__15)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__17)
      | (1ULL << ExprParser::T__18)
      | (1ULL << ExprParser::RETURN)
      | (1ULL << ExprParser::LeftParen)
      | (1ULL << ExprParser::ADDOP)
      | (1ULL << ExprParser::INC_DEC)
      | (1ULL << ExprParser::INT_CONST)
      | (1ULL << ExprParser::VAR_NAME)
      | (1ULL << ExprParser::CHAR))) != 0)) {
      setState(110);
      statement();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(ExprParser::RightCurly);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ExprParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::StatementContext::getRuleIndex() const {
  return ExprParser::RuleStatement;
}

void ExprParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConditionalStatementContext ------------------------------------------------------------------

ExprParser::If_elseContext* ExprParser::ConditionalStatementContext::if_else() {
  return getRuleContext<ExprParser::If_elseContext>(0);
}

ExprParser::ConditionalStatementContext::ConditionalStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ConditionalStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConditionalStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WriteStatementContext ------------------------------------------------------------------

ExprParser::PrinterContext* ExprParser::WriteStatementContext::printer() {
  return getRuleContext<ExprParser::PrinterContext>(0);
}

ExprParser::WriteStatementContext::WriteStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::WriteStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitWriteStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileloopStatementContext ------------------------------------------------------------------

ExprParser::While_loopContext* ExprParser::WhileloopStatementContext::while_loop() {
  return getRuleContext<ExprParser::While_loopContext>(0);
}

ExprParser::WhileloopStatementContext::WhileloopStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::WhileloopStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitWhileloopStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclareStatementContext ------------------------------------------------------------------

ExprParser::DeclarationContext* ExprParser::DeclareStatementContext::declaration() {
  return getRuleContext<ExprParser::DeclarationContext>(0);
}

ExprParser::DeclareStatementContext::DeclareStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::DeclareStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitDeclareStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ForloopStatementContext ------------------------------------------------------------------

ExprParser::For_loopContext* ExprParser::ForloopStatementContext::for_loop() {
  return getRuleContext<ExprParser::For_loopContext>(0);
}

ExprParser::ForloopStatementContext::ForloopStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ForloopStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitForloopStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStatementContext ------------------------------------------------------------------

ExprParser::ExprContext* ExprParser::ExprStatementContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

tree::TerminalNode* ExprParser::ExprStatementContext::Semi() {
  return getToken(ExprParser::Semi, 0);
}

ExprParser::ExprStatementContext::ExprStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ExprStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitExprStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignStatementContext ------------------------------------------------------------------

ExprParser::AssignmentContext* ExprParser::AssignStatementContext::assignment() {
  return getRuleContext<ExprParser::AssignmentContext>(0);
}

ExprParser::AssignStatementContext::AssignStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::AssignStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitAssignStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReadStatementContext ------------------------------------------------------------------

ExprParser::InputContext* ExprParser::ReadStatementContext::input() {
  return getRuleContext<ExprParser::InputContext>(0);
}

ExprParser::ReadStatementContext::ReadStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ReadStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitReadStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStatementContext ------------------------------------------------------------------

ExprParser::Break_stmntContext* ExprParser::BreakStatementContext::break_stmnt() {
  return getRuleContext<ExprParser::Break_stmntContext>(0);
}

ExprParser::BreakStatementContext::BreakStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::BreakStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBreakStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ContinueStatementContext ------------------------------------------------------------------

ExprParser::Cont_stmntContext* ExprParser::ContinueStatementContext::cont_stmnt() {
  return getRuleContext<ExprParser::Cont_stmntContext>(0);
}

ExprParser::ContinueStatementContext::ContinueStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ContinueStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitContinueStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatementContext ------------------------------------------------------------------

ExprParser::RetContext* ExprParser::ReturnStatementContext::ret() {
  return getRuleContext<ExprParser::RetContext>(0);
}

ExprParser::ReturnStatementContext::ReturnStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunccallStatementContext ------------------------------------------------------------------

ExprParser::CallContext* ExprParser::FunccallStatementContext::call() {
  return getRuleContext<ExprParser::CallContext>(0);
}

ExprParser::FunccallStatementContext::FunccallStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FunccallStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFunccallStatement(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::StatementContext* ExprParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, ExprParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::FunccallStatementContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(118);
      call();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::AssignStatementContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(119);
      assignment();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::DeclareStatementContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(120);
      declaration();
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::ReturnStatementContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(121);
      ret();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::ExprStatementContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(122);
      expr(0);
      setState(123);
      match(ExprParser::Semi);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::WriteStatementContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(125);
      printer();
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::ConditionalStatementContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(126);
      if_else();
      break;
    }

    case 8: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::WhileloopStatementContext>(_localctx));
      enterOuterAlt(_localctx, 8);
      setState(127);
      while_loop();
      break;
    }

    case 9: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::ForloopStatementContext>(_localctx));
      enterOuterAlt(_localctx, 9);
      setState(128);
      for_loop();
      break;
    }

    case 10: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::ReadStatementContext>(_localctx));
      enterOuterAlt(_localctx, 10);
      setState(129);
      input();
      break;
    }

    case 11: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::BreakStatementContext>(_localctx));
      enterOuterAlt(_localctx, 11);
      setState(130);
      break_stmnt();
      break;
    }
